small css fix for weather widget and iframe redirect for too small viewing areas

--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -10,7 +10,7 @@ h2.weather, .fullDay { display:none !important; }
 .today p { display:inline-block; margin:0 0 5px; padding:0;  }
 .today p:nth-child(3) { position:absolute; left:75px; top:4px; }
 .today p:nth-child(3):before { content:"- ";}
-.today p:nth-child(4), .today p:nth-child(5), .today p:nth-child(6) { float:left; width:285px;  }
+.today p:nth-child(4), .today p:nth-child(5), .today p:nth-child(6) { float:left; width:50%;  }
 .today p:first-child {display:block; margin:0; }
 .today img { display:inline-block; float:left; margin:0 20px 0 0; }
 
